# clearairturbulence.co.uk

./: .gitignore  .travis.yml  README.md  about.markdown  clearairturbulence-co-uk.cabal  deploy.sh  deploy_travis.sh  index.markdown  key.enc  package.yaml  site.hs  stack.yaml
css/: default.css  swiss.css
longform/: 2015-04-01-linear-algebra-in-strange-places.md  2016-11-17-ghc-error-minus-24.markdown  2016-11-18-scala-compile-times.markdown  2016-11-25-syntax-and-semantics.markdown  2017-02-15-styles-of-the-collegiate-shag-basic.markdown
pages/: about.markdown  archive.markdown  brief.markdown  err403.markdown  err404.markdown  index.markdown  longform.markdown  projects.markdown  research.markdown  stompin.markdown  unfinished.markdown  work-in-progress.markdown  writing.markdown
posts/: 2015-08-28-linear-algebra-semirings-graph-theory.md  2016-11-17-ghc-error-minus-24.markdown  2016-11-18-scala-compile-times.markdown  2016-11-25-syntax-and-semantics.markdown  2017-02-15-styles-of-the-collegiate-shag-basic.markdown
scratch/: avoid-mutability.md  gender-neutral-polymorphism.md  grimdank.md  jazz-up.md  leatherworking.md  scala-compile-times.md  swing-music-i-like.md  syntax-and-semantics.md  the-essence-of-swing.md  types-and-tests.md
templates/: archive.html  default.html  post-list.html  post.html
writing/: 2015-04-01-linear-algebra-in-strange-places.md  2015-08-28-linear-algebra-semirings-graph-theory.md  2016-11-17-ghc-error-minus-24.markdown  2016-11-18-scala-compile-times.markdown  2016-11-25-syntax-and-semantics.markdown  2018-08-19-test-page.markdown  (+21 more)
