name:               clearairturbulence-co-uk
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:       base >=4.7 , hakyll >= 4.5.3, old-locale >= 1.0.0.6, filepath >=1.3.0.2
  ghc-options:         -threaded
  -- hs-source-dirs:      
  default-language:    Haskell2010